2001-01-03  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* po/Makefile.in.in (update-po): Merge po-files in temporary files
	in the build directory, and update the source directory only when
	the merged catalog differs from the original.  This fixes the known
	`make distcheck' failure due to `make update-po' being called
	on up-to-date but read-only files.

2001-01-13  Jim Meyering  <meyering@lucent.com>

	* src/copy.c (same_file_ok): When moving a symlink onto itself,
	don't remove the symlink.  Reported by David Luyer as Debian bug#82089,
	via Michael Stone.
	* tests/mv/into-self-4: New test for the above.
	* tests/mv/Makefile.am (TESTS): Add into-self-4.

	* tests/chmod/setgid: If `chmod g+s d' fails, then try to chgrp
	to a group of which we're a member, then try the chmod again.

2001-01-11  Jim Meyering  <meyering@lucent.com>

	* depcomp: New version, from automake.

2001-01-10  Jim Meyering  <meyering@lucent.com>

	* src/copy.c (copy_internal): Add a comment.
	Set *copy_into_self in the new code that detects that.
	Make diagnostic more consistent: s/won't/will not/.
	[move_mode, copy_into_self]: Give a diagnstic here, now that
	we have the top_level_* globals.  Remove the corresponding diagnostic
	from mv.c.
	Add a FIXME comment.
	* src/mv.c (do_move): Remove diagnostic, now that copy.c issues it.
	Set `fail' to nonzero in the primary `if (copy_into_self)' block
	rather than in its own tiny one below.

	* src/copy.c (copy_internal): Don't allow cp (or mv, when working
	across a partition boundary) to overwrite a non-directory with a
	directory.  Reported by Michael J. Croghan.
	* tests/cp/dir-vs-file: New test for the above.
	* tests/cp/Makefile.am (TESTS): Add dir-vs-file.

2001-01-09  Jim Meyering  <meyering@lucent.com>

	Give a better diagnostic for `cp -R a a'.
	* src/copy.c (top_level_src_path, top_level_dst_path): New globals.
	(copy_internal): Use them.
	(copy): Set them.
	* src/cp-hash.c [struct entry] (node): Describe how it's used,